--- a/PayPlayConsole/PayPlayConsole.csproj
+++ b/PayPlayConsole/PayPlayConsole.csproj
@@ -13,4 +13,10 @@
     <ProjectReference Include="..\PayPlay.NetClient\PayPlay.NetClient.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
